--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/shitwishuser
 spring.datasource.username=szilard
 spring.datasource.password=szilardpost48
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
