--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 
+spring.application.name=user-microservice
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/shitwishuser
 spring.datasource.username=szilard
